# torstatus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  composer.json  docker-compose.yml  install.sh  phpstan.neon.dist
.github/workflows/: ci.yml
mariadb/sql/: install.sql  migration_20250614_add_missing_indexes.sql
mariadb/sql/migrations/: 20260614_ipv6.sql
nginx/: composer.json  css-sprites.php  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
nginx/web/: apply_migration.php  bandwidth_graph.php  bandwidth_history_graph.php  bootstrap.php  cc_exit_graph.php  cc_graph.php  column_set.php  common.php  config_docker.php  config_template.php  index.php  init.php  ip_list_all.php  ip_list_exit.php  network_detail.php  platform_graph.php  query_export.php  router_detail.php  summary_graph.php  tor_exit_query.php  uptime_graph.php  whois.php
nginx/web/js/: main.js
nginx/web/public/: .htaccess  LICENSE  bandwidth_graph.php  bandwidth_history_graph.php  cc_exit_graph.php  cc_graph.php  column_set.php  graphs.php  index.php  ip_list_all.php  ip_list_exit.php  network_detail.php  platform_graph.php  query_export.php  router_detail.php  summary_graph.php  tor_exit_query.php  uptime_graph.php  whois.php
nginx/web/src/: Common.php
nginx/web/templates/: _index_appserver.html.twig  _index_legend.html.twig  _index_opinion_source.html.twig  _index_query_options.html.twig  _index_stats.html.twig  (+8 more)
php-fpm/: Dockerfile
updater/: Dockerfile  Makefile  README.md  pyproject.toml  tns_update.pl  tns_update.py  torstatus-updater.service  torstatus-updater.timer  updater.sh
updater/src/torstatus_updater/: __init__.py  __main__.py  cache.py  config.py  db.py  dns_lookup.py  geoip.py  serializer.py  tor_client.py  updater.py
updater/tests/: test_cache.py  test_config.py  test_db.py  test_dns_lookup.py  test_geoip.py  test_serializer.py  test_tor_client.py  test_updater.py
(+39 files in other folders)
