[project]
name = "torstatus-updater"
version = "0.1.0"
description = "TorStatus database updater"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stem>=1.8.2",
    "pymysql[rsa]>=1.1.1",
    "pymemcache>=4.0.0",
    "redis>=5.0.0",
    "phpserialize>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "freezegun>=1.4",
]

[project.scripts]
torstatus-updater = "torstatus_updater.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torstatus_updater"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pyright>=1.1.410",
    "radon>=6.0.1",
    "ruff>=0.15.17",
    "vulture>=2.16",
]


[tool.ruff]
exclude = ["docs", "tests"]
line-length = 160
indent-width = 4  # Same as autopep8 default

[tool.ruff.format]
quote-style = "double"  # Or "single" if you prefer
indent-style = "space"  # Use spaces instead of tabs
line-ending = "lf"  # Keep consistency
preview = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = [
    "ANN",
    "UP",
    "UP042",
    "I"
]
select = ["E9", "F82", "D"]  # Syntax errors + docstrings
ignore = ["D203", "D213", "D100", "F821"]  # Ignore specific docstring rules

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.pyright]
exclude = ["**/__pycache__", "**/node_modules", "**/dist", "**/build", "**/venv", "**/.venv"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.vulture]
exclude = ["dist", "build", "venv", ".venv", "tests"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*", "expire"]
# make_whitelist = true
min_confidence = 80
paths = ["."]
sort_by_size = true
